--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,24 +1,22 @@
-name: Lint
+name: LINT
 
-on:
-  pull_request:
-    branches:
-      - main
+on: [pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    environment: Build
 
     steps:
       - uses: actions/checkout@v4
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
+
+      - name: Global pnpm install
+        run: npm install -g pnpm
+
       - run: pnpm install
       - run: pnpm lint
