--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
   "scripts": {
     "build": "nuxt build",
-    "dev": "concurrently \"pnpm run dev:db\" \"nuxt dev\"",
+    "dev": "nuxt dev",
+    "dev:full": "concurrently \"pnpm run dev:db\" \"nuxt dev\"",
     "dev:db": "turso dev --db-file local.db",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -19,11 +20,13 @@
     "@nuxt/eslint": "1.3.0",
     "@nuxt/icon": "1.12.0",
     "@nuxtjs/color-mode": "3.5.2",
+    "@pinia/nuxt": "0.11.0",
     "@tailwindcss/vite": "^4.1.5",
     "better-auth": "^1.2.7",
     "concurrently": "^9.1.2",
     "drizzle-orm": "^0.43.1",
     "nuxt": "^3.17.1",
+    "pinia": "^3.0.2",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
